src/buck/snapshots/muntjac__buck__string_writer__tests__config_buck_six_cells.snap
---
source: src/buck/string_writer.rs
expression: out.config_buck
---
##
## @generated by muntjac
## Do not edit by hand.
##

constraint_setting(name = "python_version")
constraint_value(name = "py311", constraint_setting = ":python_version", visibility = ["PUBLIC"])
constraint_value(name = "py312", constraint_setting = ":python_version", visibility = ["PUBLIC"])

constraint_setting(name = "platform")
constraint_value(name = "linux-aarch64-gnu", constraint_setting = ":platform", visibility = ["PUBLIC"])
constraint_value(name = "linux-x86_64-gnu", constraint_setting = ":platform", visibility = ["PUBLIC"])
constraint_value(name = "macos-arm64", constraint_setting = ":platform", visibility = ["PUBLIC"])

config_setting(
    name = "py311-linux-aarch64-gnu",
    constraint_values = [
        ":linux-aarch64-gnu",
        ":py311",
    ],
    visibility = ["PUBLIC"],
)
config_setting(
    name = "py311-linux-x86_64-gnu",
    constraint_values = [
        ":linux-x86_64-gnu",
        ":py311",
    ],
    visibility = ["PUBLIC"],
)
config_setting(
    name = "py311-macos-arm64",
    constraint_values = [
        ":macos-arm64",
        ":py311",
    ],
    visibility = ["PUBLIC"],
)
config_setting(
    name = "py312-linux-aarch64-gnu",
    constraint_values = [
        ":linux-aarch64-gnu",
        ":py312",
    ],
    visibility = ["PUBLIC"],
)
config_setting(
    name = "py312-linux-x86_64-gnu",
    constraint_values = [
        ":linux-x86_64-gnu",
        ":py312",
    ],
    visibility = ["PUBLIC"],
)
config_setting(
    name = "py312-macos-arm64",
    constraint_values = [
        ":macos-arm64",
        ":py312",
    ],
    visibility = ["PUBLIC"],
)
