src/buck/snapshots/muntjac__buck__string_writer__tests__per_cell_deps_select.snap
---
source: src/buck/string_writer.rs
expression: out.buck
---
##
## @generated by muntjac
## Do not edit by hand.
##

load("//third-party/python:muntjac.bzl", "pypi_package")

pypi_package(
    name = "rich",
    version = "13.0",
    deps = select({
        "//third-party/python/config:py311-linux-x86_64-gnu": [
            ":foo",
            ":typing-extensions",
        ],
        "//third-party/python/config:py312-linux-x86_64-gnu": [
            ":foo",
        ],
    }),
    wheels = {
        "py311-linux-x86_64-gnu": ("https://example.com/rich-13.0-py311-linux-x86_64-gnu.whl", "sha256:rich"),
        "py312-linux-x86_64-gnu": ("https://example.com/rich-13.0-py312-linux-x86_64-gnu.whl", "sha256:rich"),
    },
    visibility = ["PUBLIC"],
)
