src/buck/snapshots/muntjac__buck__string_writer__tests__snapshot_empty_buck.snap
---
source: src/buck/string_writer.rs
expression: StringTemplateEmitter.emit(&empty_input()).buck
---
##
## @generated by muntjac
## Do not edit by hand.
##

load("//third-party/python:muntjac.bzl", "pypi_package")
