src/buck/snapshots/muntjac__buck__string_writer__tests__snapshot_empty_config_buck.snap
---
source: src/buck/string_writer.rs
expression: StringTemplateEmitter.emit(&empty_input()).config_buck
---
##
## @generated by muntjac
## Do not edit by hand.
##

config_setting(
    name = "py312-linux-x86_64-gnu",
    constraint_values = [
        "//third-party/python/config:py312",
        "//third-party/python/config:linux-x86_64-gnu",
    ],
)

constraint_setting(name = "python_version")
constraint_value(name = "py312", constraint_setting = ":python_version")

constraint_setting(name = "platform")
constraint_value(name = "linux-x86_64-gnu", constraint_setting = ":platform")
