src/buck/snapshots/muntjac__buck__string_writer__tests__snapshot_empty_muntjac_bzl.snap
---
source: src/buck/string_writer.rs
expression: StringTemplateEmitter.emit(&empty_input()).muntjac_bzl
---
##
## @generated by muntjac
##
## Wiring contract for consumers:
##
##   One-time project setup — add to your root PACKAGE (see
##   third-party/python/wiring.bzl for the full snippet):
##
##     load("@prelude//cfg/modifier:set_cfg_modifiers.bzl", "set_cfg_modifiers")
##     load("//third-party/python:wiring.bzl", "MUNTJAC_HOST_MODIFIERS")
##     # ...plus cfg_constructor loads...
##     set_cfg_constructor(...)
##     set_cfg_modifiers(cfg_modifiers = MUNTJAC_HOST_MODIFIERS)
##
##   This registers buck2's cfg_constructor and auto-routes the host
##   OS+CPU to the matching muntjac platform constraint.
##
##   To pick a python version, set a per-binary modifier or a
##   root-PACKAGE default:
##
##     # per-binary
##     python_binary(
##         name = "service",
##         modifiers = ["//third-party/python/config:py312"],
##         deps = ["//third-party/python:numpy"],
##         main = "main.py",
##     )
##
##     # root PACKAGE default
##     set_cfg_modifiers(["//third-party/python/config:py312"])
##
## Available muntjac python constraints: py312
##

_CONFIGS = [
    "py312-linux-x86_64-gnu",
]

def pypi_package(name, version, wheels, deps = [], visibility = None, labels = [], overlay_files = [], entry_points = [], runtime_env = {}, **kwargs):
    unknown = [cfg for cfg in wheels.keys() if cfg not in _CONFIGS]
    if unknown:
        fail("unknown config(s) in {}: {}".format(name, unknown))

    # Dedup source-target rules by (src, sha): pure-python wheels often span
    # all cfgs with the same content. Emit one rule per unique tuple, then
    # N library variants referencing it. Source-target index assignment is
    # deterministic (sorted cfg iteration).
    seen_sources = {}
    src_targets = {}
    for cfg in sorted(wheels.keys()):
        src, sha256 = wheels[cfg]
        sha = sha256.removeprefix("sha256:")
        key = (src, sha)
        if key in seen_sources:
            src_targets[cfg] = seen_sources[key]
            continue
        target = "{}-{}-src-{}".format(name, version, len(seen_sources))
        seen_sources[key] = target
        src_targets[cfg] = target

        if src.startswith("prebake:"):
            rel = src[len("prebake:"):]
            native.export_file(
                name = target,
                src = "prebake/{}".format(rel),
                visibility = [],
            )
        else:
            native.http_file(
                name = target,
                sha256 = sha,
                urls = [src],
                visibility = [],
            )

    # Overlay (S6): if overlay_files non-empty, build an `__overlaid` rule
    # that unzips the wheel, copies overlay sources in, and re-zips.
    # The result is a single .whl that replaces every per-cell source.
    overlay_label = None
    if overlay_files:
        first_src = sorted(src_targets.values())[0]
        # Wrap each overlay file in an export_file so genrule's $(location ...)
        # can resolve to it (buck2 rejects raw file paths inside $(location)).
        overlay_targets = []
        for (i, (path_in_wheel, src_label)) in enumerate(overlay_files):
            t = "{}-{}__overlay-src-{}".format(name, version, i)
            native.export_file(
                name = t,
                src = src_label,
                visibility = [],
            )
            overlay_targets.append((path_in_wheel, t))
        cp_lines = []
        for (path_in_wheel, t) in overlay_targets:
            parent = path_in_wheel.rsplit("/", 1)[0] if "/" in path_in_wheel else "."
            cp_lines.append("mkdir -p _u/" + parent + " && cp $(location :" + t + ") _u/" + path_in_wheel)
        cp_cmds = " && ".join(cp_lines)
        # Genrule cmd runs at the project root. Buck's $(location :X)
        # expands to a project-root-relative path, so unzip must NOT cd
        # into _u before invoking it — instead, use `unzip -d _u`. The
        # final zip is run from inside _u so the archive's entries don't
        # carry the `_u/` prefix.
        cmd_template = (
            "set -e && mkdir _u && unzip -q -d _u $(location :" + first_src + ") && " +
            cp_cmds + " && cd _u && zip -qrX ../$OUT . -x '*/RECORD'"
        )
        native.genrule(
            name = "{}-{}__overlaid".format(name, version),
            srcs = [":" + first_src] + [":" + t for (_, t) in overlay_targets],
            out = "{}-{}-overlaid.whl".format(name, version),
            cmd = cmd_template,
            visibility = [],
        )
        overlay_label = ":{}-{}__overlaid".format(name, version)

    for cfg in sorted(wheels.keys()):
        native.prebuilt_python_library(
            name = "{}-{}__{}".format(name, version, cfg),
            binary_src = overlay_label or ":{}".format(src_targets[cfg]),
            deps = deps,
            visibility = [],
        )

    native.alias(
        name = "{}-{}".format(name, version),
        actual = select({
            "//third-party/python/config:{}".format(cfg): ":{}-{}__{}".format(name, version, cfg)
            for cfg in wheels.keys()
        }),
        visibility = [],
    )
    native.alias(
        name = name,
        actual = ":{}-{}".format(name, version),
        visibility = visibility or ["PUBLIC"],
    )

    # Entry points (S6): one python_binary + convenience alias per name.
    # main_module uses the standard `<importable>.__main__` convention;
    # entry points that need a different module require a wheel-meta shim
    # (deferred — see TECH_DEBT TD-S6-03).
    for ep_name in entry_points:
        importable = name.replace("-", "_")
        native.python_binary(
            name = "{}-{}__bin-{}".format(name, version, ep_name),
            main_module = importable + ".__main__",
            deps = [":" + name],
            env = runtime_env,
            visibility = visibility or ["PUBLIC"],
            labels = labels,
        )
        native.alias(
            name = ep_name,
            actual = ":{}-{}__bin-{}".format(name, version, ep_name),
            visibility = visibility or ["PUBLIC"],
        )
