src/buck/snapshots/muntjac__buck__string_writer__tests__snapshot_empty_package_file.snap
---
source: src/buck/string_writer.rs
expression: StringTemplateEmitter.emit(&empty_input()).package_file
---
##
## @generated by muntjac
## Do not edit by hand.
##

# Wires python_version + platform constraints so consumers' python_binary
# selects the right wheel via the alias-with-select pattern.
#
# S3 emits a minimal PACKAGE; full set_cfg_modifiers wiring lands in S4
# once multi-platform select() has been exercised against a buck2 build.
# (placeholder)
