src/buck/snapshots/muntjac__buck__string_writer__tests__snapshot_multi_package_buck.snap
---
source: src/buck/string_writer.rs
expression: StringTemplateEmitter.emit(&multi_package_input()).buck
---
##
## @generated by muntjac
## Do not edit by hand.
##

load("//third-party/python:muntjac.bzl", "pypi_package")

pypi_package(
    name = "idna",
    version = "3.7",
    deps = [],
    wheels = {
        "py311-linux-x86_64-gnu": ("https://example.com/idna-3.7-py3-none-any.whl", "sha256:iiii"),
        "py312-linux-x86_64-gnu": ("https://example.com/idna-3.7-py3-none-any.whl", "sha256:iiii"),
    },
    visibility = ["PUBLIC"],
)

pypi_package(
    name = "requests",
    version = "2.32.3",
    deps = [
        ":idna",
    ],
    wheels = {
        "py311-linux-x86_64-gnu": ("https://example.com/requests-2.32.3-py3-none-any.whl", "sha256:rrrr"),
        "py312-linux-x86_64-gnu": ("https://example.com/requests-2.32.3-py3-none-any.whl", "sha256:rrrr"),
    },
    visibility = ["PUBLIC"],
)
