src/buck/snapshots/muntjac__buck__string_writer__tests__snapshot_multi_package_config_buck.snap
---
source: src/buck/string_writer.rs
expression: StringTemplateEmitter.emit(&multi_package_input()).config_buck
---
##
## @generated by muntjac
## Do not edit by hand.
##

constraint_setting(name = "python_version")
constraint_value(name = "py311", constraint_setting = ":python_version", visibility = ["PUBLIC"])
constraint_value(name = "py312", constraint_setting = ":python_version", visibility = ["PUBLIC"])

constraint_setting(name = "platform")
constraint_value(name = "linux-x86_64-gnu", constraint_setting = ":platform", visibility = ["PUBLIC"])

config_setting(
    name = "py311-linux-x86_64-gnu",
    constraint_values = [
        ":linux-x86_64-gnu",
        ":py311",
    ],
    visibility = ["PUBLIC"],
)
config_setting(
    name = "py312-linux-x86_64-gnu",
    constraint_values = [
        ":linux-x86_64-gnu",
        ":py312",
    ],
    visibility = ["PUBLIC"],
)
