src/buck/snapshots/muntjac__buck__string_writer__tests__snapshot_multi_package_muntjac_bzl.snap
---
source: src/buck/string_writer.rs
expression: StringTemplateEmitter.emit(&multi_package_input()).muntjac_bzl
---
##
## @generated by muntjac
##
## Wiring contract for consumers:
##
##   One-time project setup — add to your root PACKAGE:
##
##     load("//third-party/python:wiring.bzl", "setup_muntjac")
##     setup_muntjac()
##
##   This registers buck2's cfg_constructor and auto-routes the host
##   OS+CPU to the matching muntjac platform constraint.
##
##   To pick a python version, set a per-binary modifier or a
##   root-PACKAGE default:
##
##     # per-binary
##     python_binary(
##         name = "service",
##         modifiers = ["//third-party/python/config:py312"],
##         deps = ["//third-party/python:numpy"],
##         main = "main.py",
##     )
##
##     # root PACKAGE default
##     load("@prelude//cfg/modifier:set_cfg_modifiers.bzl", "set_cfg_modifiers")
##     set_cfg_modifiers(["//third-party/python/config:py312"])
##
## Available muntjac python constraints: py311, py312
##

_CONFIGS = [
    "py311-linux-x86_64-gnu",
    "py312-linux-x86_64-gnu",
]

def pypi_package(name, version, wheels, deps = [], visibility = None, **kwargs):
    unknown = [cfg for cfg in wheels.keys() if cfg not in _CONFIGS]
    if unknown:
        fail("unknown config(s) in {}: {}".format(name, unknown))

    for cfg, wheel in wheels.items():
        url, sha = wheel
        if sha.startswith("sha256:"):
            sha = sha[len("sha256:"):]
        wheel_name = "{}-{}-{}-wheel".format(name, version, cfg)
        native.http_file(
            name = wheel_name,
            sha256 = sha,
            urls = [url],
            visibility = [],
        )
        native.prebuilt_python_library(
            name = "{}-{}__{}".format(name, version, cfg),
            binary_src = ":" + wheel_name,
            deps = deps,
            visibility = [],
        )

    native.alias(
        name = "{}-{}".format(name, version),
        actual = select({
            "//third-party/python/config:" + cfg: ":{}-{}__{}".format(name, version, cfg)
            for cfg in wheels.keys()
        }),
        visibility = [],
    )
    native.alias(
        name = name,
        actual = ":{}-{}".format(name, version),
        visibility = visibility if visibility != None else ["PUBLIC"],
    )
