src/buck/snapshots/muntjac__buck__string_writer__tests__snapshot_single_package_buck.snap
---
source: src/buck/string_writer.rs
expression: StringTemplateEmitter.emit(&single_package_input()).buck
---
##
## @generated by muntjac
## Do not edit by hand.
##

load("//third-party/python:muntjac.bzl", "pypi_package")

pypi_package(
    name = "certifi",
    version = "2025.4.26",
    deps = [],
    wheels = {
        "py312-linux-x86_64-gnu": ("https://files.pythonhosted.org/p/certifi-2025.4.26-py3-none-any.whl", "sha256:0123abcd"),
    },
    visibility = ["PUBLIC"],
)
